--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,42 +1,55 @@
 <h1>Eat Da Burger!</h1>
 
-<h2>Add a Custom Burger</h2>
-<form class="form">
+<div id="burger-menus">
 
-  <div class="form-group">
-    <label for="bu">Burger Name:</label>
-    <input type="text" id="bu" name="name">
+  <div class="menu">
+
+    <h2>Add a Custom Burger</h2>
+    <form class="form">
+
+      <div class="form-group">
+        <label for="bu">Burger Name:</label>
+        <input type="text" id="bu" name="name">
+      </div>
+
+      <div class="form-group">
+        <label for="eat">devoured?</label><br>
+        <input type="radio" name="devoured" value="1" checked> This burger was devoured<br>
+        <input type="radio" name="devoured" value="0"> Not yet devoured
+      </div>
+
+      <button type="submit" id="submit">Add Burger</button>
+    </form>
+
   </div>
 
-  <div class="form-group">
-    <label for="eat">devoured?</label><br>
-    <input type="radio" name="devoured" value="1" checked> This burger was devoured<br>
-    <input type="radio" name="devoured" value="0"> Not yet devoured
-  </div>
+  <div class="menu">
+    
+    <h2>Available Burgers</h2>
 
-  <button type="submit" id="submit">Add Burger</button>
-</form>
-
-
-<h2>Burgers available to eat.</h2>
-
-<ul>
-  {{#each burgers}}
-    {{#unless devoured}}
+    <ul>
+      {{#each burgers}}
+      {{#unless devoured}}
       {{burger_name}}
       <button class="burger" data-id="{{id}}">Eat Me!</button>
-    {{/unless}}
-  {{/each}}
-</ul>
+      {{/unless}}
+      {{/each}}
+    </ul>
 
-<h2>Burgers which have been devoured.</h2>
+  </div>
 
-<ul>
-  {{#each burgers}}
-    {{#if devoured}}
+  <div class="menu">
+
+    <h2>Eaten Burgers</h2>
+
+    <ul>
+      {{#each burgers}}
+      {{#if devoured}}
       {{burger_name}}
-    {{/if}}
-  {{/each}}
-</ul>
+      {{/if}}
+      {{/each}}
+    </ul>
 
+  </div>
 
+</div>
