changed default status of new burger to be uneaten

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,8 +14,8 @@
 
       <div class="form-group">
         <label for="eat">devoured?</label><br>
-        <input type="radio" name="devoured" value="1" checked> This burger was devoured<br>
-        <input type="radio" name="devoured" value="0"> Not yet devoured
+        <input type="radio" name="devoured" value="1"> This burger was devoured<br>
+        <input type="radio" name="devoured" value="0" checked> Not yet devoured
       </div>
 
       <button type="submit" id="submit">Add Burger</button>
