--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,8 +1,6 @@
 <h1>Eat Da Burger!</h1>
 
-<div id="burger-menus">
-
-  <div class="menu">
+<div id="add-burger" class="card">
 
     <h2>Add a Custom Burger</h2>
     <form class="form">
@@ -21,9 +19,11 @@
       <button type="submit" id="submit">Add Burger</button>
     </form>
 
-  </div>
+</div>
 
-  <div class="menu">
+<div id="burger-menus">
+
+  <div class="card">
     
     <h2>Available Burgers</h2>
 
@@ -38,7 +38,7 @@
 
   </div>
 
-  <div class="menu">
+  <div class="card">
 
     <h2>Eaten Burgers</h2>
 
