--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,11 +1,14 @@
-h1 {
-  justify-content: center;
+h1, h2 {
+  text-align: center;
 }
 
 .card {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  min-width: 30%;
+  max-width: 45%;
+  min-height: 30%;
 }
 
 #add-burger {
@@ -16,19 +19,19 @@ h1 {
 
 #burger-menus {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 ul {
   display: flex;
   flex-direction:column;
   justify-content: center;
+  background:#faebd7
 }
 
 li {
   padding: 5px;
   margin: 5px;
-  background: #faebd7;
 }
 
 .label {
@@ -50,4 +53,5 @@ button {
   color: white;
   font-weight: bold;
   border-radius:5px;
+  width: 75px;
 }
