--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,8 +12,8 @@
 
       <div class="form-group">
         <label for="eat">devoured?</label><br>
-        <input type="radio" name="devoured" value="1"> This burger was devoured<br>
-        <input type="radio" name="devoured" value="0" checked> Not yet devoured
+        <input type="radio" name="devoured" value="1"> This burger was eaten<br>
+        <input type="radio" name="devoured" value="0" checked> Not yet eaten
       </div>
 
       <button type="submit" id="submit">Add Burger</button>
